K8s/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-load-balancer
  labels:
    app: react-docker
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: react-docker
