K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: react-docker
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:333427308013:certificate/facfbcc0-8932-4e4b-9825-477976cb76a5
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ssl-entrance
    app.kubernetes.io/name: ssl-entrance
  name: ssl-entrance-ingress
spec:
  ingressClassName: ssl-entrance-class # or whatever ingress class name of ELB
  rules:
    - host: humblagga.com # change it to your host name here
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: react-frontend
                port:
                  name: http
  tls:
    - hosts:
        - humblagga.com # change it to your host name here
